<resources>
    <string name="app_name">ps-news</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment_2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment_3">Hello blank fragment 3</string>
    <string name="msg_token_fmt">my token</string>
    <string name="sample_title">This is a title</string>
    <string name="old_first">Old news first</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="new_first">New news first</string>
    <string name="toggle_notification">toggle notification</string>
    <string name="show_inbox">show inbox</string>
    <string name="moe_inbox_notification_title">News Flash Notification Center</string>
    <string name="published_at">Published at</string>
    <string name="no_internet">No Internet</string>
    <string name="author">Author</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="source">Source</string>
    <string name="sample_desc">This is a description again and again and again This is a description again and again and again This is a description again and again and again This is a description again and again and again </string>
    <string name="title_activity_child">ChildActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>